--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,10 @@ services:
       - ${REDIS_PORT}:6379
     volumes:
       - ${REDIS_DATA_PATH}:/data
+      - ${REDIS_CONF_PATH}:/usr/local/etc/redis
     environment:
       TZ: Asia/Shanghai
+    command: /usr/local/etc/redis/redis.conf
     logging:
       options:
         max-size: 10mb
